IRtest_out/global_init_expr.err
irs/global_init_expr.ll:4:33: error: integer constant must have integer type
@A20 = constant [3 x [3 x i32]] 1
                                ^
1 error generated.
